CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

PROJECT(OpenVDB)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(OPENVDB_DIR ${CMAKE_SOURCE_DIR})

ADD_SUBDIRECTORY(openvdb)

SET(OPENVDB_INSTALL_BINARY_DIR  "${CMAKE_INSTALL_PREFIX}/bin")
SET(OPENVDB_INSTALL_LIBRARY_DIR "${CMAKE_INSTALL_PREFIX}/lib")
SET(OPENVDB_INSTALL_INCLUDE_DIR "${CMAKE_INSTALL_PREFIX}/include")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OPENVDB_INSTALL_BINARY_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OPENVDB_INSTALL_LIBRARY_DIR})
