FIND_PACKAGE(Boost REQUIRED)

FIND_PATH(ILMBASE_INCLUDE_DIR REQUIRED)
FIND_PATH(ILMBASE_LIBRARY_DIR REQUIRED)

FIND_PATH(TBB_INCLUDE_DIR REQUIRED)
FIND_PATH(TBB_LIBRARY_DIR REQUIRED)

FIND_PACKAGE(ZLIB REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR} ${TBB_INCLUDE_DIR} ${ILMBASE_INCLUDE_DIR} ${ZLIB_INCLUDE_DIRS} ${OPENVDB_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIR} ${ILMBASE_LIBRARY_DIR} ${TBB_LIBRARY_DIR})

SET(OPENVDB_SOURCE_FILES
	Grid.cc
	Platform.cc)

SET(OPENVDB_HEADER_FILES
	Exceptions.h
	Grid.h
	Platform.h
	Types.h
	openvdb.h
	version.h)

# IO
FILE(GLOB OPENVDB_IO_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/io/*.cc)
FILE(GLOB OPENVDB_IO_HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/io/*.h)
SOURCE_GROUP(IO FILES ${OPENVDB_IO_SOURCE_FILES} ${OPENVDB_IO_HEADER_FILES})

# Math
FILE(GLOB OPENVDB_MATH_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/math/*.cc)
FILE(GLOB OPENVDB_MATH_HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/math/*.h)
SOURCE_GROUP(Math FILES ${OPENVDB_MATH_SOURCE_FILES} ${OPENVDB_MATH_HEADER_FILES})

# Metadata
FILE(GLOB OPENVDB_METADATA_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/metadata/*.cc)
FILE(GLOB OPENVDB_MATADATA_HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/metadata/*.h)
SOURCE_GROUP(Metadata FILES ${OPENVDB_METADATA_SOURCE_FILES} ${OPENVDB_MATADATA_HEADER_FILES})

#Tools
FILE(GLOB OPENVDB_TOOLS_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/tools/*.cc)
FILE(GLOB OPENVDB_TOOLS_HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/tools/*.h)
SOURCE_GROUP(Tools FILES ${OPENVDB_TOOLS_SOURCE_FILES} ${OPENVDB_TOOLS_HEADER_FILES})

#Tree
FILE(GLOB OPENVDB_TREE_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/tree/*.cc)
FILE(GLOB OPENVDB_TREE_HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/tree/*.h)
SOURCE_GROUP(Tree FILES ${OPENVDB_TREE_SOURCE_FILES} ${OPENVDB_TREE_HEADER_FILES})

#Util
FILE(GLOB OPENVDB_UTIL_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/util/*.cc)
FILE(GLOB OPENVDB_UTIL_HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/util/*.h)
SOURCE_GROUP(Util FILES ${OPENVDB_UTIL_SOURCE_FILES} ${OPENVDB_UTIL_HEADER_FILES})

ADD_DEFINITIONS(-DOPENVDB_PRIVATE)

IF(MSVC)
	ADD_DEFINITIONS(-DNOMINMAX)
ENDIF()

ADD_LIBRARY(OpenVDB SHARED ${OPENVDB_SOURCE_FILES} ${OPENVDB_HEADER_FILES}
	${OPENVDB_IO_SOURCE_FILES} ${OPENVDB_IO_HEADER_FILES}
	${OPENVDB_MATH_SOURCE_FILES} ${OPENVDB_MATH_HEADER_FILES}
	${OPENVDB_METADATA_SOURCE_FILES} ${OPENVDB_MATADATA_HEADER_FILES}
	${OPENVDB_TOOLS_SOURCE_FILES} ${OPENVDB_TOOLS_HEADER_FILES}
	${OPENVDB_TREE_SOURCE_FILES} ${OPENVDB_TREE_HEADER_FILES}
	${OPENVDB_UTIL_SOURCE_FILES} ${OPENVDB_UTIL_HEADER_FILES})
TARGET_LINK_LIBRARIES(OpenVDB Half tbb ${ZLIB_LIBRARIES})
