FIND_PATH(CPPUNIT_INCLUDE_DIR REQUIRED)
FIND_PATH(CPPUNIT_LIBRARY_DIR REQUIRED)

INCLUDE_DIRECTORIES(${CPPUNIT_INCLUDE_DIR})
LINK_DIRECTORIES(${CPPUNIT_LIBRARY_DIR})

FILE(GLOB OPENVDB_UNITTEST_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.cc)

ADD_DEFINITIONS(-DOPENVDB_OPENEXR_STATICLIB)
REMOVE_DEFINITIONS(-DOPENVDB_PRIVATE)
ADD_EXECUTABLE(vdb_test ${OPENVDB_UNITTEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(vdb_test vdb debug cppunitd half)
TARGET_LINK_LIBRARIES(vdb_test vdb optimized cppunit half)
